# macstt

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/macstt/: __init__.py  client.py  protocol.py
examples/python/: recommended.py
macstt-helper/macstt-helper/: AppController.swift  Command.swift  CommandReader.swift  EventWriter.swift  SpeechEvent.swift  SpeechPermission.swift  SpeechRecognizer.swift
macstt-helper/macstt-helper.xcodeproj/project.xcworkspace/xcuserdata/sakhisaswatpanda.xcuserdatad/: UserInterfaceState.xcuserstate
macstt-helper/macstt-helper.xcodeproj/xcuserdata/sakhisaswatpanda.xcuserdatad/xcschemes/: xcschememanagement.plist
native/macstt-helper/macstt-helper/: AppController.swift  EventWriter.swift  SpeechEvent.swift  SpeechRecognizer.swift  StatusEvent.swift  main.swift
native/macstt-helper/macstt-helper.xcodeproj/: project.pbxproj
native/macstt-helper/macstt-helper.xcodeproj/project.xcworkspace/xcuserdata/sakhisaswatpanda.xcuserdatad/: UserInterfaceState.xcuserstate
native/macstt-helper/macstt-helper.xcodeproj/xcshareddata/xcschemes/: macstt-helper.xcscheme
native/macstt-helper/macstt-helper.xcodeproj/xcuserdata/sakhisaswatpanda.xcuserdatad/xcschemes/: xcschememanagement.plist
python/: dev.py  pyproject.toml  setup.py
python/examples/: basic.py  recommended.py
python/macstt/: __init__.py  client.py  models.py
python/macstt/helper/: macstt-helper
scripts/: build_helper.sh
tools/: build_helper.sh  build_package.sh  dev_setup.sh
