[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "macstt"
version = "0.1.0"
description = "Native macOS speech-to-text for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sakhi Saswat Panda" }
]
license = { text = "MIT" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["macstt*"]

[tool.setuptools.package-data]
macstt = [
    "bin/macstt-helper"
]